--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,101 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<%= link_to "logout", sessions_logout_path %>!
+<div>
+    <div class="voice-header-div left-pane">
+        <div class="container">
+            <div class="leftPanelHeading">
+                Message Box
+            </div>
+            <div class="searchfield">
+                <input id="tfn-search-box" placeholder="Search TFN " class="searchinput" name="tfn-search"
+                    type="text" onkeypress="return isNumberKey(event)" />
+                <input id="clear-search" onclick="clearTfnSearchBox()" type="button" class="searchIco" />
+                <input type="submit" value="clear" onclick="clearTfnSearchBox()" style="display: none;
+                    position: relative; top: -25px; margin-left: 180px; float: left" />
+            </div>
+        </div>
+    </div>
+    <div class="voice-header-div right-pane">
+        <div class="headingContainer">
+            <h1>
+                Complaint Mail Inbox <span id="selected-tfn"></span>
+            </h1>
+        </div>
+        <ul>
+            <li><a class="unread" onclick="markUnread()">Unread</a></li>
+            <li><a class="delete" onclick="deleteMany()">Delete</a></li>
+            <li><a class="assign" onclick="assignToMe()">Assign to me</a></li>
+            <li><a class="Unassign" onclick="unassign()">Unassign</a></li>
+        </ul>
+    </div>
+</div>
+<div style="clear: both;">
+    <div id="leftContent" class="left-pane" style="min-height: 650px; height: auto;">
+        <ul class="tfn-list">
+            <% if !@TFNList.nil? %>
+				<% @TFNList.each do |record| %>
+                <li tfn-value="<%=record%>">
+					<a href="#"  onclick="getTable(<%=record%>)"><%=record%></a>
+				</li>
+				<% end %>
+            <% end %>
+        </ul>
+    </div>
+    <div id="rightContent" class="right-pane">
+        <div id="ajax-progress" style="display: none">
+            <p>
+                Loading...
+            </p>
+        </div>
+        <div id="error-message">
+                <p class="alert">
+                    Please select TFN to view voice mails
+                </p>
+        </div>
+        <div class="vm-search-bar">   
+        </div>
+        <div id="showtable">
+        </div>
+    </div>
+</div>
+<script>
+$(document).ready(function () {
+    $('.datepicker').datepicker();
+
+    $('#tfn-search-box').keyup(function () {
+        if ($(this).val() == '') {
+            $("#clear-search").attr("class", "searchIco");
+            $('.tfn-list li').show();
+        }
+        else {
+            var tfn_prefix = $(this).val();
+            $('.tfn-list li').hide();
+            $(".tfn-list li[tfn-value^='" + tfn_prefix + "']").show();
+        }
+    });
+});
+
+function getTable(tfnn) {
+			alert(tfnn);
+            $.ajax({
+                url: "gettable",
+                type: 'GET',
+                data: { mytfn: tfnn },
+                beforeSend: function () {
+                    $("#error-message").html("");
+                    $("#ajax-progress").show();
+                },
+                complete: function () {
+                    $("#ajax-progress").hide();
+                },
+                dataType: 'html',
+                traditional: true,
+                contentType: 'html',
+                error: failedMessage,
+                success: function (result) {
+                    $('#showtable').html(result);
+                }
+            });
+}			
+</script>
+
+
+
