--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+    <header>
+        <h1 style="float: left"></h1>
+        <div style="float: right">
+  	<span class="user" style="font-size: 17px; margin-right: 18px"><strong>Welcome!</strong></span>
+  	<strong> <%= link_to "Log off", {controller: "sessions", action: "logout"}, class: "logout", style:"height: 19px; top: 4px" %></strong></div>
+    </header>
+    <div id="content">
+        <section class="content-wrapper main-content clear-fix">
+		<%= yield %>
+        </section>
+    </div>
+    <footer>
+        <div style="float: right">
+            <p>&copy; FaisLab</p>
+        </div>
+    </footer>
 
 </body>
 </html>
